<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">intentexample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="num">Number</string>
    <string name="message">Message</string>
    <string name="startcall">Start Call</string>
    <string name="makecall">Make Call</string>
    <string name="starttext">Start Text</string>
    <string name="maketext">Make Text</string>
    <string name="url">URL</string>
    <string name="browse">Browse</string>
    <string name="map">Maps</string>

</resources>